@@ -7,7 +7,9 @@ This change log contains a list of completed to-do's (new features, bug fixes, r
 == Validator change log ==
 
 === Validator 0.4.2 ===
-(2010-1x-xx)
+(2010-10-28)
+
+* Fixed compatibility with MediaWiki 1.15.x.
 
 * Removed the lowerCaseValue field in the Parameter class and replaced it's functionality with a ParameterManipulation.
 
